--- a/pdfs/index.html
+++ b/pdfs/index.html
@@ -1,1 +1,2 @@
 <embed src="https://anthoozier.github.io/rapport_IRCICA.pdf" width="100%" height="850px"/>
+<embed src="https://anthoozier.github.io/rapport_CRCINA.pdf" width="100%" height="850px"/>
